--- a/src/app/pages/executuve/tabs-dashboard/tabs-dashboard.page.html
+++ b/src/app/pages/executuve/tabs-dashboard/tabs-dashboard.page.html
@@ -63,9 +63,66 @@
 
  
         <ion-grid>
+           <!-- Total ADMISSION -->
           <ion-row>
             <ion-col size-xs="12" class="ion-text-center">
-              <h3>Total Admissions : <b>{{totalAdmissions}}</b></h3>
+              <h3>Total Admissions : 
+                <b *ngIf="!totalAdmissionsV33">{{totalAdmissions}}</b>
+                <ion-spinner name="crescent" *ngIf="totalAdmissionsV33"></ion-spinner>
+              </h3>
+            </ion-col>
+
+
+
+
+
+            
+            <ion-col size-xs="6" >
+                <ion-item id="ion-item-ac" lines="none" routerLink='/' routerDirection="back">
+                  <ion-avatar slot="start">
+                    <chh-app-text-avatar [text]='tTC' [color]=""></chh-app-text-avatar>
+                  </ion-avatar>
+                  
+                  <ion-label>
+                    <h1>
+                      <b *ngIf="!totalAdmissionsV33">{{totalAdmissionsC}}</b>
+                      <ion-spinner name="crescent" *ngIf="totalAdmissionsV33"></ion-spinner>
+                    </h1>
+
+                  </ion-label>
+                </ion-item>
+            </ion-col>
+
+
+            <ion-col size-xs="6" >
+                <ion-item id="ion-item-dn" lines="none" routerLink='/' routerDirection="back">
+                  <ion-avatar slot="start">
+                    <chh-app-text-avatar [text]='tTM' [color]=""></chh-app-text-avatar>
+                  </ion-avatar>
+                  <ion-label>
+                    <h1>
+                        <b *ngIf="!totalAdmissionsV33">{{totalAdmissionsM}}</b>
+                        <ion-spinner name="crescent" *ngIf="totalAdmissionsV33"></ion-spinner>
+                    </h1>
+
+                  </ion-label>
+                </ion-item>
+            </ion-col>
+
+          </ion-row>
+          <ion-row>
+            <ion-col size-xs="12" class="ion-text-center">
+              <ion-item></ion-item>
+              </ion-col>
+            </ion-row>
+                        <!-- NEW ADMISSION -->
+          <ion-row>
+            <ion-col size-xs="12" class="ion-text-center">
+              <h3>
+                New Admissions Today : 
+                <b *ngIf="!totalAdmissionsTodayV33">{{totalAdmissionstoday}}</b>
+                <ion-spinner name="crescent" *ngIf="totalAdmissionsTodayV33"></ion-spinner>
+              </h3>
             </ion-col>
             <ion-col size-xs="6" >
                 <ion-item id="ion-item-ac" lines="none" routerLink='/' routerDirection="back">
@@ -74,8 +131,11 @@
                   </ion-avatar>
                   
                   <ion-label>
-                    <h1><b>{{totalAdmissionsC}}</b></h1>
-                    <!--p>{{this.functionsService.convertToCamelCase(this.constants.ADMISSION_STATUS__VALUE__ADMITTED)}}</p-->
+                    <h1>
+                      <b *ngIf="!totalAdmissionsTodayV33">{{totalAdmissionstodayC}}</b>
+                      <ion-spinner name="crescent" *ngIf="totalAdmissionsTodayV33"></ion-spinner>
+                    </h1>
+
                   </ion-label>
                 </ion-item>
             </ion-col>
@@ -85,7 +145,10 @@
                     <chh-app-text-avatar [text]='tTM' [color]=""></chh-app-text-avatar>
                   </ion-avatar>
                   <ion-label>
-                    <h1><b>{{totalAdmissionsM}}</b></h1>
+                    <h1>
+                      <b *ngIf="!totalAdmissionsTodayV33">{{totalAdmissionstodayM}}</b>
+                      <ion-spinner name="crescent" *ngIf="totalAdmissionsTodayV33"></ion-spinner>
+                    </h1>
                     <!--p class="ion-text-wrap" >{{this.functionsService.convertToCamelCase(this.constants.ADMISSION_STATUS__VALUE__FOR_DISCHARGE)}}</p-->
                   </ion-label>
                 </ion-item>
@@ -97,9 +160,13 @@
               <ion-item></ion-item>
               </ion-col>
             </ion-row>
+            <!-- FOR DISCHARGE -->
           <ion-row>
             <ion-col size-xs="12" class="ion-text-center">
-              <h3>New Admissions Today : <b>{{totalAdmissionstoday}}</b></h3>
+              <h3>For Discharge : 
+                <b *ngIf="!forDischargeV33">{{forDischarge}}</b>
+                <ion-spinner name="crescent" *ngIf="forDischargeV33"></ion-spinner>
+              </h3>
             </ion-col>
             <ion-col size-xs="6" >
                 <ion-item id="ion-item-ac" lines="none" routerLink='/' routerDirection="back">
@@ -108,7 +175,10 @@
                   </ion-avatar>
                   
                   <ion-label>
-                    <h1><b>{{totalAdmissionstodayC}}</b></h1>
+                    <h1>
+                      <b *ngIf="!forDischargeV33">{{forDischargeC}}</b>
+                      <ion-spinner name="crescent" *ngIf="forDischargeV33"></ion-spinner>
+                    </h1>
                     <!--p>{{this.functionsService.convertToCamelCase(this.constants.ADMISSION_STATUS__VALUE__ADMITTED)}}</p-->
                   </ion-label>
                 </ion-item>
@@ -119,41 +189,10 @@
                     <chh-app-text-avatar [text]='tTM' [color]=""></chh-app-text-avatar>
                   </ion-avatar>
                   <ion-label>
-                    <h1><b>{{totalAdmissionstodayM}}</b></h1>
-                    <!--p class="ion-text-wrap" >{{this.functionsService.convertToCamelCase(this.constants.ADMISSION_STATUS__VALUE__FOR_DISCHARGE)}}</p-->
-                  </ion-label>
-                </ion-item>
-            </ion-col>
-
-          </ion-row>
-          <ion-row>
-            <ion-col size-xs="12" class="ion-text-center">
-              <ion-item></ion-item>
-              </ion-col>
-            </ion-row>
-          <ion-row>
-            <ion-col size-xs="12" class="ion-text-center">
-              <h3>For Discharge : <b>{{forDischarge}}</b></h3>
-            </ion-col>
-            <ion-col size-xs="6" >
-                <ion-item id="ion-item-ac" lines="none" routerLink='/' routerDirection="back">
-                  <ion-avatar slot="start">
-                    <chh-app-text-avatar [text]='tTC' [color]=""></chh-app-text-avatar>
-                  </ion-avatar>
-                  
-                  <ion-label>
-                    <h1><b>{{forDischargeC}}</b></h1>
-                    <!--p>{{this.functionsService.convertToCamelCase(this.constants.ADMISSION_STATUS__VALUE__ADMITTED)}}</p-->
-                  </ion-label>
-                </ion-item>
-            </ion-col>
-            <ion-col size-xs="6" >
-                <ion-item id="ion-item-dn" lines="none" routerLink='/' routerDirection="back">
-                  <ion-avatar slot="start">
-                    <chh-app-text-avatar [text]='tTM' [color]=""></chh-app-text-avatar>
-                  </ion-avatar>
-                  <ion-label>
-                    <h1><b>{{forDischargeM}}</b></h1>
+                    <h1>
+                      <b *ngIf="!forDischargeV33">{{forDischargeM}}</b>
+                      <ion-spinner name="crescent" *ngIf="forDischargeV33"></ion-spinner>
+                    </h1>
                     <!--p class="ion-text-wrap" >{{this.functionsService.convertToCamelCase(this.constants.ADMISSION_STATUS__VALUE__FOR_DISCHARGE)}}</p-->
                   </ion-label>
                 </ion-item>
