--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -24,7 +24,8 @@
   <div class="wrapper">
     <ion-grid>
       <ion-row>
-        <ion-col size-lg="4" offset-lg="4 " size-md="6" offset-md="3" size-sm="6" size="12" class="my-custom-slider">
+        <ion-col size-lg="4" offset-lg="4 " size-md="6" offset-md="3" size-sm="6" offset-sm="3" size="12"
+          class="my-custom-slider">
           <ion-card class="form-wrapper">
             <img src="assets/img/orgwide-png.png" />
             <ion-card-content>
