--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,33 @@
 <ion-split-pane contentId="menu-content" when="xs" [disabled]="true">
     <ion-menu contentId="menu-content" menuId="menu-content" side="start" type="overlay">
-        <ion-header>
+        <!--ion-header>
             <ion-toolbar color="mango">
                 <ion-title>More</ion-title>
-            </ion-toolbar>
-        </ion-header>
+            </ion-toolbar>a
+        </ion-header-->
         <ion-content>
+            <div class="menu-header-bg">
+                <ion-item lines="none" color="mango">
+
+
+
+
+                    <ion-avatar slot="start">
+                        <chh-app-text-avatar [text]="lastName" [color]=""></chh-app-text-avatar>
+                    </ion-avatar>
+                    <ion-label style="margin-top: -5px;" color="mango">
+                        <ion-item slot="start" lines="none" class="ion-no-padding" style="padding-bottom: 5px;"
+                            color="mango">
+                            <h2 class="ion-text-wrap" style="padding-top: 20px;">
+                                {{ lastName }}, {{firstName}}
+                            </h2>
+                        </ion-item>
+
+                    </ion-label>
+
+                </ion-item>
+            </div>
+
             <ion-list *ngFor="let p of appPages">
                 <ion-menu-toggle auto-hide="false" *ngIf="role_flag == p.type" (click)="whattodo(p.url)">
                     <ion-item [routerDirection]="'root'" [routerLink]="[p.url]" *ngIf="p.url != 'logout'">
