--- a/src/app/tab-in-patients/tab-in-patients.page.html
+++ b/src/app/tab-in-patients/tab-in-patients.page.html
@@ -2,44 +2,17 @@
   <div *ngIf="!isDesktop">
     <ion-toolbar color="mango">
       <ion-title>
-        <ion-icon name="person-circle-outline"></ion-icon> {{this.constants.MENU__VALUE__IN_PATIENTS}} <ion-text
-          style="font-size:14px">
+        <ion-icon name="person-circle-outline"></ion-icon>
+        {{this.constants.MENU__VALUE__IN_PATIENTS}} <ion-text style="font-size:14px">
           {{admittedOrDischargeLabel}}
         </ion-text>
+        <ion-icon [name]="isNotification === true ? 'mail-unread-outline' : 'mail-outline'" style="float:right"
+          routerLink="/menu/inbox" routerDirection="root">
+        </ion-icon>
       </ion-title>
     </ion-toolbar>
-    <!-- <ion-fab horizontal="end" vertical="top" slot="fixed" *ngIf="!isDesktop">
-      <ion-fab-button color="light" class="">
-        <ion-icon name="options-outline"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-list side="bottom">
-        <ion-fab-button
-          class="tab-font-family"
-          color="light"
-          (click)="onSubmit(this.constants.ADMISSION_STATUS_SELECTION__VALUE__ALL,true)"
-          data-desc= "All"
-        >
-          <ion-icon name="person-outline"></ion-icon>
-        </ion-fab-button>
-        <ion-fab-button
-          class="tab-font-family"
-          color="light"
-          (click)="onSubmit(this.constants.ADMISSION_STATUS__CODE__ADMITTED,true)"
-          data-desc="Admitted"
-        >
-          <ion-icon name="person-add-outline"></ion-icon>
-        </ion-fab-button>
-        <ion-fab-button
-          class="tab-font-family"
-          color="light"
-          (click)="onSubmit(this.constants.ADMISSION_STATUS__CODE__FOR_DISCHARGE,true)"
-          data-desc="For Discharge"
-        >
-          <ion-icon name="person-remove-outline"></ion-icon>
-        </ion-fab-button>
-      </ion-fab-list>
-    </ion-fab> -->
   </div>
+
 
 
   <ion-grid class="ion-no-padding chh-darkmode">
