--- a/src/app/pages/executuve/tabs-historical/tabs-historical.page.html
+++ b/src/app/pages/executuve/tabs-historical/tabs-historical.page.html
@@ -9,6 +9,63 @@
         </ion-button>
       </ion-buttons>
     </ion-toolbar>
+
+    <ion-grid class="ion-no-padding">
+      <ion-row class="custom-padding">
+        <ion-col size="6">
+          <ion-item button="true" id="open-modalFrom" style="font-size: 13px !important;">
+            <ion-label>From</ion-label>
+            <ion-text slot="end">{{ dateTodayFrom }}</ion-text>
+          </ion-item>
+          <ion-modal trigger="open-modalFrom" class="ion6modal">
+            <ng-template>
+              <ion-content class="blur">
+                <ion-datetime #popoverDatetime presentation="month"
+                  (ionChange)="formatDate('from',popoverDatetime.value)" showDefaultButtons="true"
+                  [value]="dateValueFrom">
+                </ion-datetime>
+              </ion-content>
+            </ng-template>
+          </ion-modal>
+        </ion-col>
+        <ion-col size="6">
+          <ion-item button="true" id="open-modalTo" style="font-size: 13px !important;">
+            <ion-label>To</ion-label>
+            <ion-text slot="end">{{ dateTodayTo }}</ion-text>
+          </ion-item>
+          <ion-modal trigger="open-modalTo" class="ion6modal">
+            <ng-template>
+              <ion-content class="blur">
+                <ion-datetime #popoverDatetime presentation="month" (ionChange)="formatDate('to',popoverDatetime.value)"
+                  showDefaultButtons="true" [value]="dateValueTo">
+                </ion-datetime>
+              </ion-content>
+            </ng-template>
+          </ion-modal>
+        </ion-col>
+        <ion-col size="12">
+          <ion-item button="true" id="open-modalYear" style="font-size: 13px !important;">
+            <!--ion-icon icon="calendar-outline" slot="start" color="mango"></ion-icon-->
+            <ion-label>Year</ion-label>
+            <ion-text slot="end">{{ dateTodayYear }}</ion-text>
+          </ion-item>
+          <ion-modal trigger="open-modalYear" class="ion6modal">
+            <ng-template>
+              <ion-content class="blur">
+                <ion-datetime #popoverDatetime presentation="year"
+                  (ionChange)="formatDate('year',popoverDatetime.value)" showDefaultButtons="true"
+                  [value]="dateValueYear">
+                </ion-datetime>
+              </ion-content>
+            </ng-template>
+          </ion-modal>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+
+
+
+
   </div>
 </ion-header>
 
@@ -24,132 +81,7 @@
         <ion-grid>
           <ion-card mode="ios">
             <ion-row>
-              <!--ion-col>
-                <div class="ion-text-center">
-                  <ion-item class="ion-text-center">
-                    <b class="ion-text-center">Total Admissions 2022 : 2304</b>
-                  </ion-item>
-                </div>
-              </ion-col-->
-
               <ion-col size-xs="12" class="ion-text-center">
-                <ion-grid class="ion-no-padding">
-                  <ion-row class="custom-padding">
-                    <ion-col size="6">
-                      <ion-item button="true" id="open-modalFrom" style="font-size: 13px !important;">
-                        <ion-label>From</ion-label>
-                        <ion-text slot="end">{{ dateTodayFrom }}</ion-text>
-                      </ion-item>
-                    </ion-col>
-                    <ion-col size="6">
-                      <ion-item button="true" id="open-modalTo" style="font-size: 13px !important;">
-                        <ion-label>To</ion-label>
-                        <ion-text slot="end">{{ dateTodayTo }}</ion-text>
-                      </ion-item>
-
-                    </ion-col>
-                  </ion-row>
-                </ion-grid>
-
-
-
-
-
-
-                <ion-modal trigger="open-modalFrom" class="ion6modal">
-                  <ng-template>
-                    <ion-content class="blur">
-                      <ion-datetime #popoverDatetime presentation="month"
-                        (ionChange)="formatDate('from',popoverDatetime.value)" showDefaultButtons="true"
-                        [value]="dateValueFrom">
-                      </ion-datetime>
-                    </ion-content>
-                  </ng-template>
-                </ion-modal>
-
-
-
-
-
-                <ion-modal trigger="open-modalTo" class="ion6modal">
-                  <ng-template>
-                    <ion-content class="blur">
-                      <ion-datetime #popoverDatetime presentation="month"
-                        (ionChange)="formatDate('to',popoverDatetime.value)" showDefaultButtons="true"
-                        [value]="dateValueTo">
-                      </ion-datetime>
-                    </ion-content>
-                  </ng-template>
-                </ion-modal>
-
-
-
-                <ion-item button="true" id="open-modalYear" style="font-size: 13px !important;">
-                  <!--ion-icon icon="calendar-outline" slot="start" color="mango"></ion-icon-->
-                  <ion-label>Year</ion-label>
-                  <ion-text slot="end">{{ dateTodayYear }}</ion-text>
-                </ion-item>
-                <ion-modal trigger="open-modalYear" class="ion6modal">
-                  <ng-template>
-                    <ion-content class="blur">
-                      <ion-datetime #popoverDatetime presentation="year"
-                        (ionChange)="formatDate('year',popoverDatetime.value)" showDefaultButtons="true"
-                        [value]="dateValueYear">
-                      </ion-datetime>
-                    </ion-content>
-                  </ng-template>
-                </ion-modal>
-                <!--ion-item style="font-size: 13px !important;">
-                  <ion-label>From</ion-label>
-                  <ion-select value="01" [(ngModel)]="monthTrendFrom" (ionChange)="monthTrendFromTo()">
-                    <ion-select-option value="01">January</ion-select-option>
-                    <ion-select-option value="02">February</ion-select-option>
-                    <ion-select-option value="03">March</ion-select-option>
-                    <ion-select-option value="04">April</ion-select-option>
-                    <ion-select-option value="05">May</ion-select-option>
-                    <ion-select-option value="06">June</ion-select-option>
-                    <ion-select-option value="07">July</ion-select-option>
-                    <ion-select-option value="08">August</ion-select-option>
-                    <ion-select-option value="09">September</ion-select-option>
-                    <ion-select-option value="10">October</ion-select-option>
-                    <ion-select-option value="11">November</ion-select-option>
-                    <ion-select-option value="12">December</ion-select-option>
-                  </ion-select>
-                </ion-item>
-                <ion-item style="font-size: 13px !important;">
-                  <ion-label>To</ion-label>
-                  <ion-select value="12" [(ngModel)]="monthTrendTo" (ionChange)="monthTrendFromTo()">
-                    <ion-select-option value="01">January</ion-select-option>
-                    <ion-select-option value="02">February</ion-select-option>
-                    <ion-select-option value="03">March</ion-select-option>
-                    <ion-select-option value="04">April</ion-select-option>
-                    <ion-select-option value="05">May</ion-select-option>
-                    <ion-select-option value="06">June</ion-select-option>
-                    <ion-select-option value="07">July</ion-select-option>
-                    <ion-select-option value="08">August</ion-select-option>
-                    <ion-select-option value="09">September</ion-select-option>
-                    <ion-select-option value="10">October</ion-select-option>
-                    <ion-select-option value="11">November</ion-select-option>
-                    <ion-select-option value="12">December</ion-select-option>
-                  </ion-select>
-                </ion-item->
-                <ion-item style="font-size: 13px !important;">
-                  <ion-label>Year</ion-label>
-                  <ion-select [(ngModel)]="yearTreandTO" (ionChange)="monthTrendYear()">
-                    <ion-select-option value="2022">2022</ion-select-option>
-                    <ion-select-option value="2021">2021</ion-select-option>
-                    <ion-select-option value="2020">2020</ion-select-option>
-                    <ion-select-option value="2019">2019</ion-select-option>
-                    <ion-select-option value="2018">2018</ion-select-option>
-                    <ion-select-option value="2017">2017</ion-select-option>
-                    <ion-select-option value="2016">2016</ion-select-option>
-                  </ion-select>
-                </ion-item-->
-                <br />
-                <!--ion-item>
-                  <ion-label>Start Date</ion-label>
-                  <ion-datetime displayFormat="MMMM" placeholder="Select Date"></ion-datetime>
-                </ion-item-->
                 <ion-col>
                   <ion-item class="addpadding" lines="none">
                     <div class='center-button'>
