--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
@@ -56,7 +56,10 @@
         </ion-checkbox>
       </ion-item>
       <ion-item lines="none" *ngIf="isVatDisabled">
-        <ion-label>Add VAT not applicable </ion-label>
+        <ion-label class="fontSize-14 ion-text-wrap">VAT Not Applicable. Patient is <span
+            *ngIf="is_pwd=='Y'">PWD</span><span *ngIf="is_pwd=='Y' && is_senior=='Y'">,</span><span
+            *ngIf="is_senior=='Y'">Senior</span>.
+        </ion-label>
       </ion-item>
     </ion-card>
     <pfhelper [InsurancePlusPhilhealth]="true" [txtInsurancePF]="txtInsurancePF" [txtInsuranceVAT]="txtInsuranceVAT"
@@ -186,7 +189,10 @@
           (ionChange)="personalPhilhealthVat()" [disabled]="isVatDisabled"></ion-checkbox>
       </ion-item>
       <ion-item lines="none" *ngIf="isVatDisabled">
-        <ion-label>Add VAT not applicable </ion-label>
+        <ion-label class="fontSize-14 ion-text-wrap">VAT Not Applicable. Patient is <span
+            *ngIf="is_pwd=='Y'">PWD</span><span *ngIf="is_pwd=='Y' && is_senior=='Y'">,</span><span
+            *ngIf="is_senior=='Y'">Senior</span>.
+        </ion-label>
       </ion-item>
 
     </ion-card>
@@ -373,7 +379,11 @@ ______          _    _
                     </ion-checkbox>
                   </ion-item>
                   <ion-item lines="none" *ngIf="isVatDisabled">
-                    <ion-label>Add VAT not applicable </ion-label>
+                    <ion-label class="fontSize-14 ion-text-wrap">VAT Not Applicable. Patient is
+                      <span *ngIf="is_pwd=='Y'">PWD</span>
+                      <span *ngIf="is_pwd=='Y' && is_senior=='Y'">,</span>
+                      <span *ngIf="is_senior=='Y'">Senior</span>.
+                    </ion-label>
                   </ion-item>
                 </ion-card>
 
@@ -469,21 +479,8 @@ ______                         ______   _   _   _____   _____
                     </ion-col>
                   </ion-row>
                 </ion-grid>
-                <!-- <ion-card mode="ios" *ngIf="!isDesktop" >
-      <ion-item disabled="true">
-        <ion-label>Accept PhilHealth Only?</ion-label> 
-        <ion-checkbox color="mango" checked="false" [(ngModel)]="IsPhilhealthOnly" (ionChange)="isPhilhealthOnly()"></ion-checkbox>
-      </ion-item>
-    </ion-card> -->
+
                 <ion-card mode="ios">
-
-                  <!--ion-item lines="none">
-                    <ion-label>&#8369; </ion-label>
-                    <ion-input color="danger" type="number" inputmode="decimal" minlength="0" placeholder="0"
-                      [(ngModel)]="PersonalPhilhealthPF" (keydown)="personalPhilhealth($event)"
-                      (ionChange)="personalPhilhealthChange()"></ion-input>
-                  </ion-item-->
-
                   <ion-item lines="none" [formGroup]="form">
                     <ion-label>&#8369; </ion-label>
                     <ion-input color="danger" formControlName="PersonalPhilhealthPF" id="PersonalPhilhealthPF"
@@ -502,7 +499,11 @@ ______                         ______   _   _   _____   _____
                       (ionChange)="personalPhilhealthVat()" [disabled]="isVatDisabled"></ion-checkbox>
                   </ion-item>
                   <ion-item lines="none" *ngIf="isVatDisabled">
-                    <ion-label>Add VAT not applicable </ion-label>
+                    <ion-label class="fontSize-14 ion-text-wrap">VAT Not Applicable. Patient is
+                      <span *ngIf="is_pwd=='Y'">PWD</span>
+                      <span *ngIf="is_pwd=='Y' && is_senior=='Y'">,</span>
+                      <span *ngIf="is_senior=='Y'">Senior</span>.
+                    </ion-label>
                   </ion-item>
 
                 </ion-card>
