--- a/src/app/pages/doctors-information/inbox/inbox.page.html
+++ b/src/app/pages/doctors-information/inbox/inbox.page.html
@@ -9,11 +9,11 @@
             </span>
             <span class="padding-left-30 font-weight-500 fontSize-16"> &nbsp;&nbsp;Medical
               Certificate <span class="fontSize-14">({{modeSelected}}) </span>
-              <ion-icon style="float:right; padding-right:20px" name="ellipsis-vertical-outline"
+              <!--<ion-icon style="float:right; padding-right:20px" name="ellipsis-vertical-outline"
                 id="trigger-inbox-popover" class="pointer">
-              </ion-icon>
+              </ion-icon>-->
             </span>
-            <ion-popover trigger="trigger-inbox-popover" dismiss-on-select="true">
+            <!--<ion-popover trigger="trigger-inbox-popover" dismiss-on-select="true">
               <ng-template>
                 <ion-content>
                   <ion-list>
@@ -33,7 +33,7 @@
                   </ion-list>
                 </ion-content>
               </ng-template>
-            </ion-popover>
+            </ion-popover>-->
           </ion-col>
         </ion-row>
       </ion-grid>
@@ -55,6 +55,23 @@
               </ion-content>
             </ng-template>
           </ion-modal-->
+          <ion-item>
+            <ion-segment [(ngModel)]="selected">
+              <ion-segment-button value="FA" (click)="changeMode('FA')" [ngClass]="{'boldMe': selected === 'FA'}"
+                class="pointer">
+                <ion-label>for Approval</ion-label>
+              </ion-segment-button>
+              <ion-segment-button value="FR" (click)="changeMode('FR')" [ngClass]="{'boldMe': selected === 'FR'}"
+                class="pointer">
+                <ion-label>for Revision</ion-label>
+              </ion-segment-button>
+              <ion-segment-button value="DA" (click)="changeMode('DA')" [ngClass]="{'boldMe': selected === 'DA'}"
+                class="pointer">
+                <ion-label>Approved</ion-label>
+              </ion-segment-button>
+            </ion-segment>
+
+          </ion-item>
           <ion-item>
             <ion-label>View Record</ion-label>
             <ion-select [(ngModel)]="pastdays" value="{{pastdays}}" (ionChange)="viewRecordDays()" okText="Okay"
@@ -122,8 +139,8 @@
                             </ion-badge>
                             <ion-badge class="icon" color="warning" mode="ios" *ngIf="x.rework_dx_flg == 'V'">Revised
                             </ion-badge>
-                            <ion-badge class="icon" color="success" mode="ios"
-                              *ngIf="x.approval_status == 'FA' || x.approval_status == 'RA' ">For Approval
+                            <ion-badge class="icon" color="success" mode="ios" *ngIf="x.approval_status == 'FA' ">For
+                              Approval
                             </ion-badge>
                             <ion-badge class="icon" color="success" mode="ios" *ngIf="x.approval_status == 'FR' ">For
                               Revision
@@ -131,6 +148,12 @@
                             <ion-badge class="icon" color="success" mode="ios" *ngIf="x.approval_status == 'DA' ">
                               Approved
                             </ion-badge>
+                            <ion-badge class="icon" color="mango" mode="ios" *ngIf="x.approval_status == 'RA' ">
+                              Approved by RES
+                            </ion-badge>
+
+
+
                           </p>
                         </ion-text>
                       </h2>
